# Chat-App

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: client_app.hpp  settings.hpp
client/src/: client_app.cpp  main.cpp
common/: CMakeLists.txt  settings.hpp
doc/: ChatServiceApplication.pptx
doc/Presentation/: ChatServiceApplication.pptx  run_several_rooms_and_clients_present.bat
doc/flowcharts/: .$client_server.drawio.bkp  .$client_server.drawio.dtmp  .$server.drawio.bkp  client_server.drawio  main_client.drawio
server/: CMakeLists.txt
server/include/: chat_room.hpp  server_app.hpp  server_user.hpp  settings.hpp  worker_thread.h
server/src/: chat_room.cpp  main.cpp  server_app.cpp  server_user.cpp  worker_thread.cpp
tests/: CMakeLists.txt  run_several_rooms_and_clients.bat  tests.cpp
